# VIO-Calib

./: CMakeLists.txt  viocali_imu_camera_node.cpp  viocali_lidar_node.cpp
config/: vio-config.yaml
data/: pose_pre_ini_imu.txt
include/: calibrate_local_parameterization.h  parameters.h  viocali_calibrate.h  viocali_camera_factor.h  viocali_imu_factor.h  viocali_lidar_factor.h
include/utility/: data_reader.h  utility.h
src/: calibrate_local_parameterization.cpp  parameters.cpp  viocali_calibrate.cpp  viocali_camera_factor.cpp  viocali_imu_factor.cpp  viocali_lidar_factor.cpp
